--- a/styles/style.css
+++ b/styles/style.css
@@ -10,21 +10,27 @@
 .display-flex {
   display: flex;
 }
+
 .text-aline {
   text-align: center;
 }
+
 .color-dark01 {
   color: #131313;
 }
+
 .color-dark02 {
   color: #424242;
 }
+
 .color-dark03 {
   color: #727272;
 }
+
 .background-color {
   background-color: rgba(255, 144, 14, 0.1);
 }
+
 .primary-btn {
   padding: 16px 13px;
   border-radius: 5px;
@@ -35,10 +41,12 @@
   font-weight: 600;
   cursor: pointer;
 }
+
 .section-title {
   font-weight: 700;
   font: 2rem;
 }
+
 .section-description {
   font-weight: 400;
   font-size: 0.8rem;
@@ -50,41 +58,51 @@
   margin: 0 auto;
   margin-bottom: 85px;
 }
+
 section {
   margin-bottom: 85px;
 }
+
 nav ul li {
   list-style: none;
   margin-right: 15px;
 }
+
 nav a {
   text-decoration: none;
 }
+
 .nav-bar {
   align-items: center;
   justify-content: space-between;
 }
+
 .architects {
   font-weight: 800;
   font-size: 2rem;
 }
+
 .nav-list {
   font-weight: 500;
   font-size: 1rem;
 }
+
 .architect-content-width {
   max-width: 568px;
   margin: 0 auto;
   margin-bottom: 33px;
 }
+
 .architect-title {
   font-weight: 700;
   font-size: 3rem;
 }
+
 .architect-description {
   font-weight: 400;
   font-size: 0.7rem;
 }
+
 .banner-img {
   width: 100%;
 }
@@ -100,24 +118,30 @@ nav a {
   align-items: center;
   gap: 40px;
 }
+
 .features-content,
 .features-grid-img {
   flex: 1;
 }
+
 .features-grid-img {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 10px;
 }
+
 .features-grid-img img {
   width: 100%;
 }
+
 .quick {
   font-weight: 400;
 }
+
 #features {
   color: #FF900E;
 }
+
 .features-content {
   max-width: 354px;
 }
@@ -126,27 +150,33 @@ nav a {
 .experience-container {
   gap: 80px;
 }
+
 .experience-content,
 .expeience-img {
   flex: 1;
 }
+
 .expeience-img img {
   width: 100%;
 }
+
 .experience-title {
   font-weight: 700;
   font-size: 2rem;
   border-left: 5px solid #FF900E;
 }
+
 .experience-description {
   font-weight: 400;
   font-size: 0.8rem;
   border-radius: 5px;
 }
+
 .experience-card {
   font-weight: 600;
   font-size: 1rem;
 }
+
 .card-one {
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.096);
   border-radius: 5px;
@@ -156,10 +186,11 @@ nav a {
 }
 
 /* some facts start */
-.facts-container{
+.facts-container {
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
+
 .facts-card {
   border: 1px solid #FF900E;
   width: 159px;
@@ -169,61 +200,135 @@ nav a {
   align-items: center;
   border-radius: 5px;
 }
+
 .facts-container {
   justify-items: center;
   margin-top: 66px;
 }
+
 .facts-number,
 .facts-name {
   margin-top: 4px;
   margin-bottom: 4px;
 }
+
 .facts-number {
   font-weight: 600;
   font-size: 1.8rem;
   color: #424242;
 }
+
 .facts-name {
   font-weight: 600;
   font-size: 0.8;
   color: #727272;
 }
+
 .fact-description {
   max-width: 357px;
 }
 
+/* Our Sponspors start */
+.spons-container {
+  max-width: 357px;
+}
+
+.spons-icon {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  filter: grayscale(100%);
+  margin-top: 33px;
+}
+
 /* footer */
+.padding {
+  padding: 25px 0px;
+}
 
 .hide {
   display: none;
 }
+
 /* media query */
 @media screen and (max-width:576px) {
+
   nav,
   ul,
   .features {
     flex-direction: column;
   }
+
   .features-grid-img,
-  .facts-container {
+  .facts-container,
+  .spons-icon {
     grid-template-columns: repeat(1, 1fr);
   }
-  .facts-container{
+
+  .facts-container {
     gap: 20px;
   }
-  .facts-title{
-    text-align: center;
-  }
-  .fact-description{
+
+
+  .fact-description {
     margin: 0 auto;
   }
+
+  .spons-icon {
+    justify-items: center;
+    gap: 30px;
+  }
+
+  .spons-container {
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .facts-aline {
+    text-align: center;
+  }
+
+  .fact-description {
+    margin: 0 auto;
+    text-align: center;
+  }
 }
+
 /* medium device */
 @media screen and (min-width: 576px) and (max-width: 992px) {
   .features {
     flex-direction: column;
   }
+
   .features-content {
     max-width: 75%;
+  }
+
+  .spons-container {
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .facts-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .facts-aline {
+    text-align: center;
+  }
+  .fact-description {
+    margin: 0 auto;
+    text-align: center;
+  }
+  .spons-icon {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .spons-icon {
+    justify-items: center;
+    gap: 25px;
+  }
+
+  .figma {
+    grid-column: span 2;
   }
 }
